Table bigger, and included a html to each item

--- a/ECommerceWebsite/index.html
+++ b/ECommerceWebsite/index.html
@@ -2,15 +2,16 @@
 <html lang="en-US">
   <head>
   	<link rel="stylesheet" type="text/css" href="css/style.css">
+	  <script language="JavaScript" type="text/javascript" src="/js/index.js"></script>
   	<title>CraftyMommy</title>
   </head>
 
-  <body>
+  <hr>
   <hr>
     <header>
-      <a>SignIn</a>	
-      <a>My Orders</a>
-      <a>Shipping/Returns</a>    
+      <a class= "userOption">SignIn</a>
+      <a class= "userOption">My Orders</a>
+      <a class= "userOption">Shipping/Returns</a>
     </header>
 
   <hr>
@@ -22,70 +23,93 @@
   	<table>
       <tr>
   	    <td>
-  	      <a href="muffinpan.html">
+  	      <a href="items/item1.html">
   	      	<img class="image_thumbnail" src="images/muffinpan12.png" alt="12-cup Muffin Pan">
   	      </a>
   	      <h3>$10.00</h3>
   	      <h4>Item 1 Name</h4>
   	    </td>
   	    <td>
-  	      <img class="image_thumbnail" src="images/muffinpan12.png" alt="item 2 name">
+			<a href="items/item2.html">
+				<img class="image_thumbnail" src="images/muffinpan12.png" alt="item 2 name">
+			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 2 Name</h4>
   	    </td>
   	    <td>
-  	      <img class="image_thumbnail" src="images/muffinpan12.png" alt="item 3 name">
-  	      <h3>$10.00</h3>
+			<a href="items/item3.html">
+  	      		<img class="image_thumbnail" src="images/muffinpan12.png" alt="item 3 name">
+			</a>
+			<h3>$10.00</h3>
   	      <h4>Item 3 Name</h4>
   	    </td>
   	  </tr>
   	  <tr>	
  	    <td>
-  	      <img class="image_thumbnail" src="images/muffinpan12.png" alt="item 4 name">
+			<a href="items/item4.html">
+				<img class="image_thumbnail" src="images/muffinpan12.png" alt="item 4 name">
+			</a>
+
   	      <h3>$10.00</h3>
   	      <h4>Item 4 Name</h4>
   	    </td>
   	    <td>
-  	      <img class="image_thumbnail" src="images/muffinpan12.png" alt="item 5 name">
+			<a href="items/item5.html">
+				<img class="image_thumbnail" src="images/muffinpan12.png" alt="item 5 name">
+			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 5 Name</h4>
   	    </td>
   	    <td>
-  	      <img class="image_thumbnail" src="images/muffinpan12.png" alt="item 6 name">
+			<a href="items/item6.html">
+				<img class="image_thumbnail" src="images/muffinpan12.png" alt="item 6 name">
+			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 6 Name</h4>
   	    </td>
   	  </tr>
   	  <tr>	
  	    <td>
-  	      <img class="image_thumbnail" src="images/muffinpan12.png" alt="item 7 name">
+			<a href="items/item7.html">
+				<img class="image_thumbnail" src="images/muffinpan12.png" alt="item 7 name">
+			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 7 Name</h4>
   	    </td>
   	    <td>
-  	      <img class="image_thumbnail" src="images/muffinpan12.png" alt="item 8 name">
+			<a href="items/item8.html">
+				<img class="image_thumbnail" src="images/muffinpan12.png" alt="item 8 name">
+			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 8 Name</h4>
   	    </td>
   	    <td>
-  	      <img class="image_thumbnail" src="images/muffinpan12.png" alt="item 9 name">
+			<a href="items/item9.html">
+				<img class="image_thumbnail" src="images/muffinpan12.png" alt="item 9 name">
+			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 9 Name</h4>
   	    </td>
   	  </tr>
   	  <tr>
  	    <td>
-  	      <img class="image_thumbnail" src="images/muffinpan12.png" alt="item 10 name">
+			<a href="items/item10.html">
+				<img class="image_thumbnail" src="images/muffinpan12.png" alt="item 10 name">
+			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 10 Name</h4>
   	    </td>
   	    <td>
-  	      <img class="image_thumbnail" src="images/muffinpan12.png" alt="item 11 name">
+			<a href="items/item11.html">
+				<img class="image_thumbnail" src="images/muffinpan12.png" alt="item 11 name">
+			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 11 Name</h4>
   	    </td>
   	    <td>
-  	      <img class="image_thumbnail" src="images/muffinpan12.png" alt="item 12 name">
+			<a href="items/item12.html">
+				<img class="image_thumbnail" src="images/muffinpan12.png" alt="item 12 name">
+			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 12 Name</h4>
   	    </td>		
