--- a/ECommerceWebsite/index.html
+++ b/ECommerceWebsite/index.html
@@ -24,7 +24,7 @@
       <tr>
   	    <td>
   	      <a href="items/item1.html">
-  	      	<img class="image_thumbnail" src="images/muffinpan12.png" alt="12-cup Muffin Pan">
+  	      	<img class="image_thumbnail" src="images/item1/tshirtWhite.jpg" alt="12-cup Muffin Pan">
   	      </a>
   	      <h3>$10.00</h3>
   	      <h4>Item 1 Name</h4>
