--- a/ECommerceWebsite/items/item1.html
+++ b/ECommerceWebsite/items/item1.html
@@ -19,5 +19,6 @@
     <hr>
     <main>
         <p> item 1 </p>
+        <img class="image" src="../images/item1/tshirtWhite.jpg" alt="picture of a white shirt">
     </main>
 </html>
