1) changed website name to Clothing Couture 2) added home.html 3) renamed index.html to items_list.html

--- a/ECommerceWebsite/about.html
+++ b/ECommerceWebsite/about.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
   	<link rel="stylesheet" type="text/css" href="css/style.css">
-  	<title>CraftyMommy</title>
+  	<title>Clothing Couture</title>
   </head>
 
   <body>
@@ -13,13 +13,13 @@
       <a>Shipping/Returns</a>    
     </header>
   <hr>
-  	<h1>CraftyMommy</h1>
+  	<h1>Clothing Couture</h1>
   	<hr>
   	<main>
   	<p title="About page">About Page</p>
   	<p>This is where the about info goes.</p>
 
-  	<main>
+  	</main>
   	<footer>
   	<hr>
   	<a>about us</a>
