--- a/ECommerceWebsite/items_list.html
+++ b/ECommerceWebsite/items_list.html
@@ -3,7 +3,7 @@
   <head>
   	<link rel="stylesheet" type="text/css" href="css/style.css">
 	  <script language="JavaScript" type="text/javascript" src="/js/index.js"></script>
-  	<title>CraftyMommy</title>
+  	<title>Clothing Couture</title>
   </head>
 
   <hr>
@@ -15,10 +15,10 @@
     </header>
 
   <hr>
-  	<h1>CraftyMommy</h1>
+  	<h1>Clothing Couture</h1>
   	<hr>
   	<main>
-  	<p class="path">pathname/path/</p>
+  	<!--<p class="path">pathname/path/</p> we can include this later -->
   	<p>This is where the items go</p>
   	<table>
       <tr>
@@ -115,7 +115,7 @@
   	    </td>		
       </tr>
   	</table>
-  	<main>
+  	</main>
   	<footer>
   	<hr>
   	<a href="about.html">about us</a>
