item selected, zoom (buggy), buy form almost done

--- a/ECommerceWebsite/items_list.html
+++ b/ECommerceWebsite/items_list.html
@@ -23,7 +23,7 @@
   	<table>
       <tr>
   	    <td>
-  	      <a href="items/item1.html">
+  	      <a href="items/item1/item1.html">
   	      	<img class="image_thumbnail" src="images/item1/tshirtWhite.jpg" alt="12-cup Muffin Pan">
   	      </a>
   	      <h3>$10.00</h3>
