--- a/ECommerceWebsite/buyItem.html
+++ b/ECommerceWebsite/buyItem.html
@@ -10,6 +10,8 @@
     <p id="sizePicked" style ="display: none">
     <p id="costPicked">cost: </p>
     <form>
+        Quantity: <br>
+        <input type="number" name="quantity"> <br>
         First Name: <br>
         <input type="text" name="firstname"> <br>
         Last Name: <br>
@@ -18,6 +20,18 @@
         <input type="email" name="lastName"> <br>
         Phone Number: <br>
         <input type="tel" name="lastName"> <br>
+        Credit Card: <br>
+        <input type="number" name="creditCard"> <br>
+        Billing Address: <br>
+        <input type="text" name="billAddress"> <br>
+        Billing Address: <br>
+        <input type="text" name="billAddress"> <br>
+        Shipping Address: <br>
+        <input type="text" name="shipAddress"> <br>
+        Delivery Option: <br>
+        <input type ="radio" name="devliveryMethod" value="Overnight" checked>Overnight<br>
+        <input type ="radio" name="devliveryMethod" value="2Days" checked>2 Days<br>
+        <input type ="radio" name="devliveryMethod" value="7_10Days" checked>7-10 days<br>
         <input type="submit" value="Submit">
     </form>
 </body>
