--- a/ECommerceWebsite/items/item1/item1.html
+++ b/ECommerceWebsite/items/item1/item1.html
@@ -96,6 +96,8 @@
         </li>
     </ul>
 
-    <button onclick="location.href='../../buyItem.html'" type="button"> Buy</button>
+    <!--<input id="btn" type="button" value= "BUY NOW" onclick="location.href='../../buyItem.html'"/>-->
+    <input id="btn" type="button" value= "BUY NOW" onclick="buyItem()" />
+    <!--<button onclick="location.href='../../buyItem.html'" type="button"> Buy</button>-->
 </body>
 </html>
