--- a/ECommerceWebsite/items/item1/item1.html
+++ b/ECommerceWebsite/items/item1/item1.html
@@ -20,84 +20,96 @@
     <h1>Generic Clothing</h1>
     <hr>
     <!--set main item here-->
-    <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
-         src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg" alt="picture of a shirt">
-    <div id="overlay" onmousemove="zoomIn(event)"
-         style="background-image: url('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg')"></div>
+    <div class="pageContainer">
+        <div class="itemName">
+            <h2> White Shirt</h2>
+        </div>
+        <div class="productContainer">
+            <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
+                 src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg" alt="picture of a shirt">
+            <div id="overlay" onmousemove="zoomIn(event)"
+                 style="background-image: url('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg')"></div>
 
-    <ul class="itemCategories">
-        <li class="productList">
-            <div class="productListChoice">
-                <h3>Choose a design:</h3>
-            </div>
+            <ul class="itemCategories">
+                <li class="productList">
+                    <div class="productListChoice">
+                        <h3>Choose a design:</h3>
+                    </div>
 
-            <div class="list">
-                <ul class="boxList">
-                    <li class="itemList">
-                        <a href="item1.html">
-                        <img class="itemImg" id="whiteShirt" style="border-color: red"
-                             src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg">
-                        </a>
-                    </li>
-                    <li class="itemList">
-                        <!--<a href="../images/item1/tshirtWhite.jpg"-->
-                        <a href="item2.html">
-                        <img class="itemImg" id="blackShirt" src="../../images/item1/tshirtBlack.jpg">
-                        </a>
-                    </li>
-                    <li class="itemList">
-                        <!--<a href="../images/item1/tshirtWhite.jpg"-->
-                        <img class="itemImg" id="blueShirt"src="../../images/item1/tshirtBlue.jpg">
-                    </li>
-                    <li class="itemList">
-                        <!--<a href="../images/item1/tshirtWhite.jpg"-->
-                        <img class="itemImg" id="greenShirt" src="../../images/item1/tshirtGreen.jpg">
-                    </li>
-                    <li class="itemList">
-                        <!--<a href="../images/item1/tshirtWhite.jpg"-->
-                        <img class="itemImg" id="greyShirt" src="../../images/item1/tshirtGrey.jpg">
-                    </li>
-                    <li class="itemList">
-                        <!--<a href="../images/item1/tshirtWhite.jpg"-->
-                        <img class="itemImg" id="redShirt" src="../../images/item1/tshirtRed.jpg">
-                    </li>
-                </ul>
-            </div>
-        </li>
+                    <div class="list">
+                        <ul class="boxList">
+                            <li class="itemList">
+                                <a href="item1.html">
+                                <img class="itemImg" id="whiteShirt" style="border-color: red"
+                                     src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <!--<a href="../images/item1/tshirtWhite.jpg"-->
+                                <a href="item2.html">
+                                <img class="itemImg" id="blackShirt" src="../../images/item1/tshirtBlack.jpg">
+                                </a>
+                            </li>
+                            <li class="itemList">
+                                <!--<a href="../images/item1/tshirtWhite.jpg"-->
+                                <img class="itemImg" id="blueShirt"src="../../images/item1/tshirtBlue.jpg">
+                            </li>
+                            <li class="itemList">
+                                <!--<a href="../images/item1/tshirtWhite.jpg"-->
+                                <img class="itemImg" id="greenShirt" src="../../images/item1/tshirtGreen.jpg">
+                            </li>
+                            <li class="itemList">
+                                <!--<a href="../images/item1/tshirtWhite.jpg"-->
+                                <img class="itemImg" id="greyShirt" src="../../images/item1/tshirtGrey.jpg">
+                            </li>
+                            <li class="itemList">
+                                <!--<a href="../images/item1/tshirtWhite.jpg"-->
+                                <img class="itemImg" id="redShirt" src="../../images/item1/tshirtRed.jpg">
+                            </li>
+                        </ul>
+                    </div>
+                </li>
 
-        <li class="sizeList">
-            <div class="sizeChoice">
-                <h3>Choose a Size:</h3>
-            </div>
-            <ul class="boxList">
-                <li>
-                    <a title="XXSmall" class="sizeSelection" id="xxs" style="border-color: red"
-                       onclick="sizeSelect(this.id)" >XXSmall</a>
-                </li>
-                <li>
-                    <a title="XSmall" class="sizeSelection" id="xs" onclick="sizeSelect(this.id)">XSmall</a>
-                </li>
-                <li>
-                    <a title="Small" class="sizeSelection" id="s" onclick="sizeSelect(this.id)">Small</a>
-                </li>
-                <li>
-                    <a title="Medium" class="sizeSelection" id="m" onclick="sizeSelect(this.id)">Medium</a>
-                </li>
-                <li>
-                    <a title="Large" class="sizeSelection" id="l" onclick="sizeSelect(this.id)">Large</a>
-                </li>
-                <li>
-                    <a title="XLarge" class="sizeSelection" id="xl" onclick="sizeSelect(this.id)">XLarge</a>
-                </li>
-                <li>
-                    <a title="XXLarge" class="sizeSelection" id="xxl" onclick="sizeSelect(this.id)">XXLarge</a>
+                <li class="sizeList">
+                    <div class="sizeChoice">
+                        <h3>Choose a Size:</h3>
+                    </div>
+                    <ul class="boxList">
+                        <li>
+                            <a title="XXSmall" class="sizeSelection" id="xxs" style="border-color: red"
+                               onclick="sizeSelect(this.id)" >XXSmall</a>
+                        </li>
+                        <li>
+                            <a title="XSmall" class="sizeSelection" id="xs" onclick="sizeSelect(this.id)">XSmall</a>
+                        </li>
+                        <li>
+                            <a title="Small" class="sizeSelection" id="s" onclick="sizeSelect(this.id)">Small</a>
+                        </li>
+                        <li>
+                            <a title="Medium" class="sizeSelection" id="m" onclick="sizeSelect(this.id)">Medium</a>
+                        </li>
+                        <li>
+                            <a title="Large" class="sizeSelection" id="l" onclick="sizeSelect(this.id)">Large</a>
+                        </li>
+                        <li>
+                            <a title="XLarge" class="sizeSelection" id="xl" onclick="sizeSelect(this.id)">XLarge</a>
+                        </li>
+                        <li>
+                            <a title="XXLarge" class="sizeSelection" id="xxl" onclick="sizeSelect(this.id)">XXLarge</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
-        </li>
-    </ul>
 
-    <!--<input id="btn" type="button" value= "BUY NOW" onclick="location.href='../../buyItem.html'"/>-->
-    <input id="btn" type="button" value= "BUY NOW" onclick="buyItem()" />
-    <!--<button onclick="location.href='../../buyItem.html'" type="button"> Buy</button>-->
+            <div id="btnContainer">
+                <input id="btn" type="button" value= "BUY NOW" onclick="buyItem()" />
+            </div>
+        </div>
+
+        <div class="descriptionContainer">
+            <h3 id="descriptionHeader"> Description</h3>
+            <p id="descriptionContent"> this is the details about the product </p>
+        </div>
+    </div>
 </body>
 </html>
