--- a/ECommerceWebsite/items/item1/item1.html
+++ b/ECommerceWebsite/items/item1/item1.html
@@ -71,8 +71,7 @@
             </div>
             <ul class="boxList">
                 <li>
-                    <a title="XXSmall" class="sizeSelection" id="xxs" style="border-color: red"
-                       onclick="sizeSelect(this.id)" >XXSmall</a>
+                    <a title="XXSmall" class="sizeSelection" id="xxs" onclick="sizeSelect(this.id)" >XXSmall</a>
                 </li>
                 <li>
                     <a title="XSmall" class="sizeSelection" id="xs" onclick="sizeSelect(this.id)">XSmall</a>
@@ -97,7 +96,7 @@
     </ul>
 
     <!--<input id="btn" type="button" value= "BUY NOW" onclick="location.href='../../buyItem.html'"/>-->
-    <input id="btn" type="button" value= "BUY NOW" onclick="buyItem()" />
+    <input id="btn" type="button" value= "BUY NOW" onclick="buyItem('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg')" />
     <!--<button onclick="location.href='../../buyItem.html'" type="button"> Buy</button>-->
 </body>
 </html>
