--- a/ECommerceWebsite/items/item1/item2.html
+++ b/ECommerceWebsite/items/item1/item2.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/items.css">
     <!--<script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>-->
     <script type="text/javascript" src="../../js/item.js"></script>
-    <title>Item 1</title>
+    <title>Item 2</title>
 </head>
 
 <hr>
@@ -72,8 +72,7 @@
             </div>
             <ul class="boxList">
                 <li>
-                    <a title="XXSmall" class="sizeSelection" id="xxs" style="border-color: red"
-                       onclick="sizeSelect(this.id)" href="item1.html">XXSmall</a>
+                    <a title="XXSmall" class="sizeSelection" id="xxs" onclick="sizeSelect(this.id)" href="item1.html">XXSmall</a>
                 </li>
                 <li>
                     <a title="XSmall" class="sizeSelection" id="xs" onclick="sizeSelect(this.id)">XSmall</a>
@@ -97,6 +96,6 @@
         </li>
     </ul>
 
-    <button type="button"> Buy </button>
+    <input id="btn" type="button" value= "BUY NOW" onclick="buyItem('images/item1/tshirtBlack.jpg')" />
 </body>
 </html>
