Resized table in items_list.html

--- a/ECommerceWebsite/items_list.html
+++ b/ECommerceWebsite/items_list.html
@@ -23,21 +23,21 @@
       <tr>
   	    <td>
   	      <a href="items/item1/item1.html">
-  	      	<img class="image_thumbnail" src="images/item1/tshirtWhite.jpg" alt="T-Shirt">
+  	      	<img class="image_thumbnail" src="images/item1/tshirtBlack.jpg" alt="T-Shirt">
   	      </a>
   	      <h3>$10.00</h3>
   	      <h4>Item 1 Name</h4>
   	    </td>
   	    <td>
 			<a href="items/items2/item2.html">
-				<img class="image_thumbnail" src="images/vneckBlack.jpg" alt="V-Neck Shirt">
+				<img class="image_thumbnail" src="images/item2/vneckBlack.jpg" alt="V-Neck Shirt">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 2 Name</h4>
   	    </td>
   	    <td>
 			<a href="items/item3/item3.html">
-  	      		<img class="image_thumbnail" src="images/longsleeveBlack.jpg" alt="Long-Sleeved Shirt">
+  	      		<img class="image_thumbnail" src="images/item3/longsleeveBlack.jpg" alt="Long-Sleeved Shirt">
 			</a>
 			<h3>$10.00</h3>
   	      <h4>Item 3 Name</h4>
@@ -46,7 +46,7 @@
   	  <tr>	
  	    <td>
 			<a href="items/item4/item4.html">
-				<img class="image_thumbnail" src="images/longsleeveVneckBlack.jpg" alt="Long-sleeved V-Neck Shirt">
+				<img class="image_thumbnail" src="images/item4/longsleeveVneckBlack.jpg" alt="Long-sleeved V-Neck Shirt">
 			</a>
 
   	      <h3>$10.00</h3>
@@ -54,14 +54,14 @@
   	    </td>
   	    <td>
 			<a href="items/item5/item5.html">
-				<img class="image_thumbnail" src="images/hoodieBlack.jpg" alt="Hooded Shirt">
+				<img class="image_thumbnail" src="images/item5/hoodieBlack.jpg" alt="Hooded Shirt">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 5 Name</h4>
   	    </td>
   	    <td>
 			<a href="items/item6/item6.html">
-				<img class="image_thumbnail" src="images/jerseyBlack.jpg" alt="Jersey Shirt">
+				<img class="image_thumbnail" src="images/item6/jerseyBlack.jpg" alt="Jersey Shirt">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 6 Name</h4>
@@ -70,21 +70,21 @@
   	  <tr>	
  	    <td>
 			<a href="items/item1/item7.html">
-				<img class="image_thumbnail" src="images/womenchiffontopblue.png" alt="Women's Chiffon Top">
+				<img class="image_thumbnail" src="images/item7/womenchiffontopblue.png" alt="Women's Chiffon Top">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 7 Name</h4>
   	    </td>
   	    <td>
 			<a href="items/item8/item8.html">
-				<img class="image_thumbnail" src="images/womenracerbacktankorange.png" alt="Women's Racerback Top">
+				<img class="image_thumbnail" src="images/item8/womenracerbacktankorange.png" alt="Women's Racerback Top">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 8 Name</h4>
   	    </td>
   	    <td>
 			<a href="items/item9/item9.html">
-				<img class="image_thumbnail" src="images/womenofficeblue.png" alt="Women's Office Blouse">
+				<img class="image_thumbnail" src="images/item9/womenofficeblue.png" alt="Women's Office Blouse">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 9 Name</h4>
@@ -93,21 +93,21 @@
   	  <tr>
  	    <td>
 			<a href="items/item10/item10.html">
-				<img class="image_thumbnail" src="images/womenpleatedblack.png" alt="Women's Pleated Blouse">
+				<img class="image_thumbnail" src="images/item10/womenpleatedblack.png" alt="Women's Pleated Blouse">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 10 Name</h4>
   	    </td>
   	    <td>
 			<a href="items/item11/item11.html">
-				<img class="image_thumbnail" src="images/womenloosefitcoffee.png" alt="Women's Loose-Fit Blouse">
+				<img class="image_thumbnail" src="images/item11/womenloosefitcoffee.png" alt="Women's Loose-Fit Blouse">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 11 Name</h4>
   	    </td>
   	    <td>
 			<a href="items/item12/item12.html">
-				<img class="image_thumbnail" src="images/womencasualburgundy.png" alt="Women's Casual Blouse">
+				<img class="image_thumbnail" src="images/item12/womencasualburgundy.png" alt="Women's Casual Blouse">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 12 Name</h4>
