form validation and email

--- a/ECommerceWebsite/buyItem.html
+++ b/ECommerceWebsite/buyItem.html
@@ -11,92 +11,108 @@
     <img id="showImg">
     <p id="sizePicked"> </p>
     <p id="costPicked"> </p>
-    <form action="" name="userInfo" onsubmit="checkForm()">
-        Quantity:
-        <input type="number" name="quantity"> <br>
-        <table>
-            <h2>Personal Information</h2>
-            <tr>
-                <td>First Name:</td>
-                <td><input type="text" name="firstName"></td>
-            </tr>
-            <tr>
-                <td>Last Name:</td>
-                <td><input type="text" name="lastName"></td>
-            </tr>
-            <tr>
-                <td> Email Address: </td>
-                <td> <input type="email" name="emailAddress"> </td>
-            </tr>
-            <tr>
-                <td> Phone Number: </td>
-                <td> <input type="tel" name="phoneNumber"> </td>
-            </tr>
-        </table>
+    <form method="post" action="mailto:panteater@uci.edu?subject=Order Place" name="userInfo" onsubmit="checkForm()">
+        <label for="mail">
+            Quantity:
+            <input type="number" name="quantity" size="3"> <br>
+            <table>
+                <h2>Personal Information</h2>
+                <tr>
+                    <td>First Name:</td>
+                    <td><input type="text" name="firstName"></td>
+                </tr>
+                <tr>
+                    <td>Last Name:</td>
+                    <td><input type="text" name="lastName"></td>
+                </tr>
+                <tr>
+                    <td> Email Address: </td>
+                    <td> <input type="email" name="emailAddress"> </td>
+                </tr>
+                <tr>
+                    <td> Phone Number: </td>
+                    <td> <input type="tel" name="phoneArea"> - </td>
+                    <td> <input type="tel" name="phoneThree"> - </td>
+                    <td> <input type="tel" name="phoneFour"> </td>
+                </tr>
+            </table>
 
 
-        <table>
-            <h2>Billing Information</h2>
-            <tr>
-                <td> Credit Card:</td>
-                <td><input type="number" name="creditCard"> </td>
-            </tr>
-            <tr>
-                <td> Expiration Date:</td>
-                <td><input type="text" name="ccExpire"> </td>
-            </tr>
-            <tr>
-                <td>Billing Address: </td>
-                <td> <input type="text" name="billAddress"> </td>
-            </tr>
-            <tr>
-                <td>City: </td>
-                <td> <input type="text" name="billCity"> </td>
-            </tr>
-            <tr>
-                <td>State: </td>
-                <td> <input type="text" name="billState"> </td>
-            </tr>
-            <tr>
-                <td>Zip Code: </td>
-                <td> <input type="number" name="billZipCode"> </td>
-            </tr>
-        </table>
+            <table>
+                <h2>Billing Information</h2>
+                <tr>
+                    <td>Credit Card Type:</td>
+                    <td>
+                        <select name="ccType">
+                            <option value="Visa">Visa</option>
+                            <option value="MasterCard">MasterCard</option>
+                            <option value="AMEX">AMEX</option>
+                            <option value="Discover">Discover</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td> Credit Card:</td>
+                    <td><input type="text" name="creditCard"> </td>
+                </tr>
+                <tr>
+                    <td> Expiration Date:</td>
+                    <td><input type="text" name="ccExpire"> </td>
+                </tr>
+                <tr>
+                    <td>Billing Address: </td>
+                    <td> <input type="text" name="billAddress"> </td>
+                </tr>
+                <tr>
+                    <td>City: </td>
+                    <td> <input type="text" name="billCity"> </td>
+                </tr>
+                <tr>
+                    <td>State: </td>
+                    <td> <input type="text" name="billState"> </td>
+                </tr>
+                <tr>
+                    <td>Zip Code: </td>
+                    <td> <input type="text" name="billZipCode"> </td>
+                </tr>
+            </table>
 
-        <table>
-            <h2> Shipping Information</h2>
-            <tr>
-                <td>Shipping Address: </td>
-                <td> <input type="text" name="shipAddress"></td>
-            </tr>
-            <tr>
-                <td>City: </td>
-                <td> <input type="text" name="shipCity"> </td>
-            </tr>
-            <tr>
-                <td>State: </td>
-                <td> <input type="text" name="shipState"> </td>
-            </tr>
-            <tr>
-                <td>Zip Code: </td>
-                <td> <input type="number" name="shipZipCode"> </td>
-            </tr>
-            <tr>
-                <td>Delivery Option: </td>
-            </tr>
-            <tr>
-                <td><input type ="radio" name="devliveryMethod" value="Overnight" style="text-indent: 5px" checked>Overnight</td>
-            </tr>
-            <tr>
-                <td><input type ="radio" name="devliveryMethod" value="2Days">2 Days</td>
-            </tr>
-            <tr>
-                <td> <input type ="radio" name="devliveryMethod" value="7_10Days">7-10 days </td>
-            </tr>
-        </table>
+            <table>
+                <h2> Shipping Information</h2>
+                <tr>
+                    <td>Shipping Address: </td>
+                    <td> <input type="text" name="shipAddress"></td>
+                </tr>
+                <tr>
+                    <td>City: </td>
+                    <td> <input type="text" name="shipCity"> </td>
+                </tr>
+                <tr>
+                    <td>State: </td>
+                    <td> <input type="text" name="shipState"> </td>
+                </tr>
+                <tr>
+                    <td>Zip Code: </td>
+                    <td> <input type="text" name="shipZipCode"> </td>
+                </tr>
+                <tr>
+                    <td>Delivery Option: </td>
+                </tr>
+                <tr>
+                    <td><input type ="radio" name="devliveryMethod" value="Overnight" style="text-indent: 5px" checked>Overnight</td>
+                </tr>
+                <tr>
+                    <td><input type ="radio" name="devliveryMethod" value="2Days">2 Days</td>
+                </tr>
+                <tr>
+                    <td> <input type ="radio" name="devliveryMethod" value="7_10Days">7-10 days </td>
+                </tr>
+            </table>
+        </label>
 
-        <br>
-        <input type="submit" value="Submit Order">
+            <br>
+            <input type="submit" value="Submit Order" onclick="return checkForm(); return false">
+
     </form>
 </body>
 </html>
