--- a/ECommerceWebsite/items/item1/item1.html
+++ b/ECommerceWebsite/items/item1/item1.html
@@ -102,7 +102,7 @@
 
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
-                <input id="btn" type="button" value= "BUY NOW" onclick="buyItem('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg')" />
+                <input id="btn" type="button" value= "BUY NOW" onclick="buyItem('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg', 'White Shirt')" />
             </div>
         </div>
 
