Added contents to about.html

--- a/ECommerceWebsite/about.html
+++ b/ECommerceWebsite/about.html
@@ -2,28 +2,38 @@
 <html lang="en-US">
   <head>
   	<link rel="stylesheet" type="text/css" href="css/style.css">
+	  <link rel="stylesheet" type="text/css" href="css/about.css">
   	<title>Clothing Couture</title>
   </head>
 
   <body>
-  <hr>
+  <!--<hr>
     <header>
-      <a>SignIn</a>	
+      <a>SignIn</a>
       <a>My Orders</a>
       <a>Shipping/Returns</a>    
     </header>
-  <hr>
-  	<h1>Clothing Couture</h1>
-  	<hr>
-  	<main>
-  	<p title="About page">About Page</p>
-  	<p>This is where the about info goes.</p>
+  <hr>-->
+  <div class="container">
+    <div class="about-contents">
+		<h1>Clothing Couture</h1>
+		<hr>
 
-  	</main>
-  	<footer>
-  	<hr>
-  	<a>about us</a>
-  	<a>contact us</a>
-  	</footer>
+			<p title="About Us">About Us</p>
+		  <div class="about-description">
+			  <p>We want to help you feel better by looking better. Our business was established in 2017. Our goal is to
+				  sell stylish, high-quality clothes that are also comfortable and easy for our customers to wear.
+			  </p>
+		  </div>
+			<p>We appreciate your business.</p>
+			<p>-- Clothing Couture Team</p>
+		<footer>
+			<hr>
+			<a>about us</a>
+			<a>contact us</a>
+		</footer>
+	</div>
+  </div>
+
   </body>
 </html>
